test_suite/tests/ui/fail/invalid_attr_value_for_command/invalid_command_description.stderr
error: custom attribute panicked
 --> $DIR/invalid_command_description.rs:3:1
  |
3 | #[command(description=123)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: `description` must be a string literal
